# kona

./: .gitignore  404.html  CONTRIBUTING.html  Cargo.toml  README.md  glossary.html  intro.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/src/archives/: monorepo.md
book/src/sdk/: custom-backend.md  fpvm-backend.md
book/src/sdk/pipeline/: intro.md
crates/common/: Cargo.toml
crates/derive/: CHANGELOG.md  Cargo.toml  README.md
crates/derive-alloy/: Cargo.toml
crates/derive-alloy/src/: blob_provider.rs  eigen_da_provider.rs  lib.rs  mantle_upgrade.rs  pipeline.rs
crates/derive-alloy/src/eigen_da/: eigen_da_proxy.rs  mod.rs
crates/derive-alloy/src/eigen_da/grpc/: disperser.rs  rlp.rs
crates/derive/src/: errors.rs  lib.rs
crates/derive/src/attributes/: mod.rs  stateful.rs
crates/derive/src/da/: da.rs  mod.rs
crates/derive/src/eigen_da/: codec.rs  config.rs  da.rs  eigen_da_proxy.rs  mod.rs
crates/derive/src/eigen_da/grpc/: disperser.rs  interface_retriever_server.rs  mod.rs  rlp.rs
crates/derive/src/errors/: da.rs  mod.rs  stages.rs
crates/derive/src/pipeline/: builder.rs  core.rs  mod.rs
crates/derive/src/proto/: calldata.proto  calldata.rs  mod.rs
crates/derive/src/sources/: blobs.rs  calldata.rs  eigen_da.rs  ethereum.rs  mod.rs  variant.rs
crates/derive/src/stages/: attributes_queue.rs  frame_queue.rs  l1_retrieval.rs  l1_traversal.rs  mod.rs  utils.rs
crates/derive/src/stages/batch/: batch_provider.rs  batch_queue.rs  batch_stream.rs  batch_validator.rs  mod.rs
crates/derive/src/stages/channel/: channel_assembler.rs  channel_bank.rs  channel_provider.rs  channel_reader.rs
crates/derive/src/test_utils/: attributes_queue.rs  batch_provider.rs  batch_stream.rs  chain_providers.rs  eigen_da_provider.rs  frame_queue.rs  frames.rs  mod.rs  pipeline.rs  sys_config_fetcher.rs
crates/derive/src/traits/: attributes.rs  data_sources.rs  mod.rs  pipeline.rs
crates/driver/: CHANGELOG.md  Cargo.toml
crates/driver/src/: core.rs  executor.rs  lib.rs  pipeline.rs
crates/eigen-da/: CHANGELOG.md  Cargo.toml
crates/eigen-da/src/: certificate.rs  codec.rs  config.rs  constant.rs  eigen_da_proxy.rs  eigenda_data.rs  lib.rs
crates/eigen-da/src/grpc/: disperser.rs  mod.rs  rlp.rs
crates/executor/: CHANGELOG.md  Cargo.toml
crates/executor/benches/: execution.rs
crates/executor/src/: constants.rs  errors.rs  lib.rs  test_utils.rs
crates/executor/src/db/: mod.rs
crates/executor/src/executor/: builder.rs  env.rs  mod.rs  util.rs
crates/executor/src/syscalls/: eip2935.rs  eip4788.rs  mod.rs  tx_env.rs
crates/mpt/: CHANGELOG.md  Cargo.toml
crates/mpt/src/: node.rs  test_util.rs
crates/node/engine/: Cargo.toml
crates/node/engine/src/: attributes.rs  client.rs
crates/node/engine/src/state/: core.rs
crates/node/gossip/src/: block_validity.rs  driver.rs  handler.rs
crates/node/rpc/: Cargo.toml
crates/node/rpc/src/: jsonrpsee.rs  lib.rs  rollup.rs
crates/node/service/: Cargo.toml
crates/node/service/src/service/: core.rs
crates/node/sources/src/: lib.rs
crates/node/sources/src/runtime/: loader.rs
crates/proof-sdk/common-proc/: Cargo.toml
crates/proof-sdk/common/src/: lib.rs
crates/proof-sdk/preimage/: CHANGELOG.md  Cargo.toml
crates/proof-sdk/proof/: CHANGELOG.md  Cargo.toml
crates/proof-sdk/proof/src/: boot.rs  errors.rs  executor.rs  hint.rs  sync.rs
crates/proof-sdk/proof/src/l1/: blob_provider.rs  mod.rs  (+3 more)
crates/proof-sdk/std-fpvm/: Cargo.toml
crates/proof-sdk/std-fpvm-proc/: Cargo.toml
crates/proof-sdk/std-fpvm/src/: errors.rs
crates/proof/executor/: Cargo.toml
crates/proof/executor/src/: test_utils.rs  util.rs
crates/proof/proof/: Cargo.toml
crates/proof/proof-interop/: Cargo.toml
crates/proof/proof-interop/src/: consolidation.rs
crates/proof/proof/src/: boot.rs  executor.rs  hint.rs
crates/protocol/derive/: Cargo.toml
crates/protocol/derive/src/: lib.rs
crates/protocol/driver/src/: core.rs
crates/protocol/eigenda/: Cargo.toml  README.md
crates/protocol/eigenda/src/: certificate.rs  eigenda_data.rs  lib.rs  utils.rs
crates/protocol/genesis/: Cargo.toml
crates/protocol/genesis/src/: genesis.rs  lib.rs  params.rs  rollup.rs
crates/protocol/hardforks/: Cargo.toml
crates/protocol/hardforks/src/: ecotone.rs  fjord.rs  interop.rs  isthmus.rs  jovian.rs  lib.rs  test_utils.rs
crates/protocol/interop/src/: graph.rs
crates/protocol/protocol/src/: deposits.rs  sync.rs  utils.rs
crates/protocol/registry/src/: superchain.rs
crates/providers-alloy/: CHANGELOG.md  Cargo.toml
crates/providers-alloy/src/: blobs.rs  chain_provider.rs  eigen_da_provider.rs  eigen_da_proxy.rs  l2_chain_provider.rs  lib.rs
crates/providers/providers-alloy/: Cargo.toml
crates/providers/providers-alloy/src/: eigen_da_provider.rs  eigen_da_proxy.rs  lib.rs  pipeline.rs
crates/supervisor/storage/: Cargo.toml
examples/execution-fixture/src/: main.rs
fpp-dev/: env.html  epilogue.html  execution.html  intro.html  prologue.html  targets.html
scripts/: check_no_std.sh
sdk/: custom-backend.html  exec-ext.html  fpvm-backend.html  intro.html
sdk/pipeline/: intro.html  signaling.html
(+55 files in other folders)
