[package]
name = "eigen-da"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]

#Alloy
alloy-primitives = { workspace = true, features = ["rlp", "k256", "serde"] }
alloy-rlp = { workspace = true}

async-trait.workspace = true
alloc-no-stdlib = { workspace = true, optional = true}
reqwest.workspace = true

# Workspace
kona-derive = { workspace = true, features = ["serde"] }

tokio = { workspace = true, features = ["full"] }
prost = { workspace = true}
anyhow = {workspace = true}
bytes = { workspace = true}
hex = {workspace = true}
tracing.workspace = true

rust-kzg-bn254-primitives.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
