[package]
name = "kona-providers-alloy"
version = "1.0.0"
description = "Alloy-backed providers for hilo"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true
eigen-da.workspace = true

# Alloy
alloy-rlp.workspace = true
alloy-serde.workspace = true
alloy-eips = { workspace = true, features = ["kzg"] }
alloy-transport.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-provider = { workspace = true, features = ["ipc", "ws", "reqwest"] }
alloy-primitives = { workspace = true, features = ["map"] }

# Op Alloy
op-alloy-consensus.workspace = true
op-alloy-genesis.workspace = true
op-alloy-protocol.workspace = true

# Misc
lru.workspace = true
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
